--- a/Future/Future/Future.vcxproj
+++ b/Future/Future/Future.vcxproj
@@ -115,7 +115,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DelayedResult.h" />
     <ClInclude Include="CFuture.h" />
+    <ClInclude Include="CPromise.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
